reverted copy since it was causing issues on mobile

--- a/organge/public/sass/footer.scss
+++ b/organge/public/sass/footer.scss
@@ -41,9 +41,9 @@
   }
 }
 
-// .copy{
-//   padding-top: 20px;
-//   background-color: #444242;
-//   text-align: center;
-//   color: #f5f4f4;
-// }
+.copy{
+  padding-top: 20px;
+  background-color: #444242;
+  text-align: center;
+  color: #f5f4f4;
+}
